--- a/config.json
+++ b/config.json
@@ -7,5 +7,6 @@
     "MAX_CLIP_LENGTH_SECONDS": 45,
     "MIN_CLIP_VIEWS": 20,
     "STARTED_AT": "2015-01-01T00:00:00Z",
-    "ENDED_AT": "2025-09-12T23:59:59Z" 
+    "ENDED_AT": "2025-09-12T23:59:59Z",
+    "PAGES": 40,
 }
